kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-website
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: contoso-aks.int2skynet.com
      http:
        paths:
          - backend:
             service:
              name: contoso-website
              port:
                number: 80
            path: /
            pathType: Prefix
